--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -18,8 +18,12 @@
         <form class="form-text" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
             {% csrf_token %}
             {{ form|crispy }}
-            <input class="btn btn-outline-primary" type="submit" value="{% trans 'Reset My Password' %}"
-                   onclick="this.disabled=true; this.form.submit();"/>
+
+            <button class="btn btn-outline-primary" type="submit" name="action"
+                    onclick="this.disabled=true; this.form.submit();">{% trans "Reset My Password" %}</button>
+
+{#            <input class="btn btn-outline-primary" type="submit" value="{% trans 'Reset My Password' %}"#}
+{#                   onclick="this.disabled=true; this.form.submit();"/>#}
         </form>
     </div>
 {% endblock %}
