Added option to delete scores in dashboard or with POST api request

--- a/leaderboards/templates/leaderboards/leaderboard_detail.html
+++ b/leaderboards/templates/leaderboards/leaderboard_detail.html
@@ -202,6 +202,7 @@
             <th scope="col">Submission time</th>
             <th scope="col">Extra info</th>
             <th scope="col">UUID</th>
+            <th scope="col">Action</th>
         </tr>
         </thead>
         <tbody>
@@ -214,11 +215,18 @@
                 <td>{{ score.submitted_date|timesince }} ago</td>
                 <td>{{ score.extra }}</td>
                 <td>{{ score.uuid }}</td>
+                <td>
+                    <a href="{% url 'score-delete' score.pk %}">
+                        <button type="submit" class="btn btn-sm btn-outline-primary"
+                                onclick="this.disabled=true;">Delete
+                        </button>
+                    </a>
+                </td>
                 <td></td>
             </tr>
         {% empty %}
             <tr>
-                <td colspan="7">No scores for this leaderboard yet!</td>
+                <td colspan="8">No scores for this leaderboard yet!</td>
             </tr>
         {% endfor %}
         <tr>
