Added 'contact' page

--- a/leaderboards/templates/leaderboards/leaderboard_detail.html
+++ b/leaderboards/templates/leaderboards/leaderboard_detail.html
@@ -148,7 +148,7 @@
                                     }
                                 </code>
 
-                                <p>Example JSON (application/json) POST request body: </p>
+                                <p class="mt-3">Example JSON (application/json) POST request body: </p>
                                 <code>
                                     {
                                     "leaderboard_private_key": "{{ object.private_key }}",
