--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'leaderboard-list' %}"><h3>Your leaderboards</h3></a>
+                            <a class="nav-link" aria-current="page" href="{% url 'leaderboard-list' %}"><h3>Your
+                                leaderboards</h3></a>
                         </li>
                         {% if request.user.is_authenticated %}
                             <li class="nav-item">
@@ -26,6 +27,9 @@
                                 <a class="nav-link" href="{% url 'account_login' %}"><h3>Login</h3></a>
                             </li>
                         {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'contact' %}"><h3>Contact</h3></a>
+                        </li>
                     </ul>
                 </div>
             </div>
