celery periodic task added (deleting leaderboards not updated recently)

--- a/leaderboards/templates/leaderboards/leaderboard_list.html
+++ b/leaderboards/templates/leaderboards/leaderboard_list.html
@@ -21,6 +21,9 @@
                 </div>
 
                 <div class="d-flex justify-content-end">
+                    <div class="">
+                        <p class="mx-3">Modified {{ leaderboard.modified_date|timesince }} ago</p>
+                    </div>
 
                     <div class="">
                         <p class="mx-3">Scores count: {{ leaderboard.score_set.count }}</p>
