--- a/leaderboards/templates/leaderboards/leaderboard_list.html
+++ b/leaderboards/templates/leaderboards/leaderboard_list.html
@@ -9,7 +9,11 @@
         </a>
     </div>
 
-    <ol class="list-group mt-4">
+    <div class="d-flex justify-content-between mt-3 mx-1">
+        Leaderboards not modified in 31 days will be automatically deleted. Submitting a score modifies a leaderboard.
+    </div>
+
+    <ol class="list-group mt-1">
         {% for leaderboard in object_list %}
             <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
