--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -7,11 +7,7 @@
 
 {% block content %}
     <div class="d-flex flex-column align-items-center">
-        <h4>{% trans "Password Reset" %}</h4>
-
-        {% if user.is_authenticated %}
-            {% include "account/snippets/already_logged_in.html" %}
-        {% endif %}
+        <h4>E-mail sent</h4>
 
         <p class="small">{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam
             folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
