--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -6,18 +6,23 @@
 
 {% block content %}
     <div class="d-flex flex-column align-items-center">
-        <h4>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h4>
+        <h4>{% if token_fail %}{% trans "Bad Token" %}{% else %}Choose your new password{% endif %}</h4>
 
         {% if token_fail %}
             {% url 'account_reset_password' as passwd_reset_url %}
-            <p class="small">{% blocktrans %}The password reset link was invalid, possibly because it has already been
-                used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+            {% if request.user.temporary %}
+                <p class="small">The password reset link was invalid, possibly because it has already been
+                    used. Please request a <a href="{% url 'signup' %}">new password reset</a>.</p>
+            {% else %}
+                <p class="small">The password reset link was invalid, possibly because it has already been
+                    used. Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.</p>
+            {% endif %}
         {% else %}
             <form class="form-text" method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <input class="btn btn-outline-primary" type="submit" name="action"
-                       value="{% trans 'change password' %}"/>
+                       value="Submit"/>
             </form>
         {% endif %}
     </div>
