--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -14,27 +14,14 @@
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
 
+    <script src="https://unpkg.com/htmx.org@1.8.6"
+            integrity="sha384-Bj8qm/6B+71E6FQSySofJOUjA/gq330vEqjFx9LakWybUySyI1IQHwPtbTU7bNwx"
+            crossorigin="anonymous"></script>
+
     <title>Leaderboards</title>
 
-{#    <script>#}
-{#        window.fbAsyncInit = function () {#}
-{#            FB.init({#}
-{#                appId: '856116908928188',#}
-{#                cookie: true,#}
-{#                xfbml: true,#}
-{#                version: 'v15.0'#}
-{#            });#}
-{##}
-{#            FB.AppEvents.logPageView();#}
-{##}
-{#        };#}
-{#    </script>#}
-{#    <div id="fb-root"></div>#}
-{#    <script async defer crossorigin="anonymous"#}
-{#            src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v15.0&appId=856116908928188&autoLogAppEvents=1"#}
-{#            nonce="wQVlwfPo"></script>#}
 </head>
-<body>
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
 {% if not hide_navbar %}
     {% include 'navbar.html' %}
@@ -45,6 +32,16 @@
         <div class="col"></div>
         <div class="col-md-8 border-top">
             <div class="mt-3">
+                {% if request.user.temporary and 'leaderboard' in request.path %}
+                    <div class="d-flex flex-column align-items-center">
+                        <div class="alert alert-warning show" role="alert">
+                            <a class="text-decoration-none text-dark" href="{% url 'signup' %}">
+                                Create an account to prevent losing your leaderboards!
+                            </a>
+                        </div>
+                    </div>
+                {% endif %}
+
                 {% block content %}
                 {% endblock %}
             </div>
@@ -52,6 +49,5 @@
         <div class="col"></div>
     </div>
 </div>
-
 </body>
 </html>
