--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -10,7 +10,10 @@
         <div>
             <h4>{% trans "Sign Out" %}</h4>
         </div>
-        <div>
+        <div class="text-center">
+            {% if request.user.temporary %}
+                <p class="text-danger">You'll lose all your leaderboards if you log out from the temporary account!</p>
+            {% endif %}
             <p class="small">{% trans 'Are you sure you want to sign out?' %}</p>
         </div>
         <div>
