--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,18 +15,30 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'leaderboard-list' %}"><h3>Your
-                                leaderboards</h3></a>
+                            {% if request.user.is_authenticated %}
+                                <a class="nav-link" aria-current="page" href="{% url 'leaderboard-list' %}"><h3>Your
+                                    leaderboards</h3></a>
+                            {% else %}
+                                <a class="nav-link" aria-current="page" href="{% url 'temp-user-create' %}"><h3>Try
+                                    it</h3></a>
+                            {% endif %}
                         </li>
                         {% if request.user.is_authenticated %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account_logout' %}"><h3>Logout</h3></a>
-                            </li>
+                            {% if not request.user.temporary %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'account_logout' %}"><h3>Logout</h3></a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'signup' %}"><h3>Sign up</h3></a>
+                                </li>
+                            {% endif %}
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'account_login' %}"><h3>Login</h3></a>
                             </li>
                         {% endif %}
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'contact' %}"><h3>Contact</h3></a>
                         </li>
