Automatically refresh scores in leaderboard detail view (every 3s), changed creation of temp user to post request

--- a/leaderboards/templates/leaderboards/leaderboard_detail_scores.html
+++ b/leaderboards/templates/leaderboards/leaderboard_detail_scores.html
@@ -9,10 +9,11 @@
         <td>{{ score.uuid }}</td>
         <td>
             <form>
-                <button class="btn btn-sm btn-outline-primary" hx-get="{% url 'score-delete-by-hand' score.pk %}"
+                <button class="btn btn-sm btn-outline-primary" hx-post="{% url 'score-delete-by-hand' %}"
                         hx-target="#scoresld"
                         onclick="this.disabled=true;">Delete
                 </button>
+                <input type="hidden" name="pk" value="{{ score.pk }}">
             </form>
         </td>
         <td></td>
