--- a/leaderboards/templates/leaderboards/homepage.html
+++ b/leaderboards/templates/leaderboards/homepage.html
@@ -6,29 +6,30 @@
         <img class="d-block mx-auto mb-4" src="{% static 'icons/highscore.png' %}" alt="" width="72" height="72">
         <h1 class="display-5 fw-bold">Multi-platform leaderboards</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Quickly create leaderboards for your games. Free to use. Make a GET request with provided public_key to retrieve
+            <p class="lead mb-4">Quickly create leaderboards for your games. Free to use. Make a GET request with
+                provided public_key to retrieve
                 scores in JSON format. Make a GET or POST
                 request with provided private_key to submit scores.</p>
 
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    {% if request.user.is_authenticated %}
-                        <a href="{% url 'leaderboard-list' %}">
-                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Your leaderboards</button>
-                        </a>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                {% if request.user.is_authenticated %}
+                    <a href="{% url 'leaderboard-list' %}">
+                        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Your leaderboards</button>
+                    </a>
 
-                        <a href="{% url 'account_logout' %}">
-                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Logout</button>
-                        </a>
-                    {% else %}
-                        <a href="{% url 'temp-user-create' %}">
-                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Try it</button>
-                        </a>
+                    <a href="{% url 'account_logout' %}">
+                        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Logout</button>
+                    </a>
+                {% else %}
+                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3"
+                            hx-post="{% url 'temp-user-create' %}" hx-target="body" onclick="this.disabled=true;">Try it
+                    </button>
 
-                        <a href="{% url 'account_login' %}">
-                            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Login</button>
-                        </a>
-                    {% endif %}
-                </div>
+                    <a href="{% url 'account_login' %}">
+                        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Login</button>
+                    </a>
+                {% endif %}
+            </div>
 
         </div>
     </div>
