--- a/leaderboards/templates/leaderboards/leaderboard_detail.html
+++ b/leaderboards/templates/leaderboards/leaderboard_detail.html
@@ -236,7 +236,10 @@
         </tbody>
     </table>
 
-    <h4 class="mt-3">Scores (best 50).</h4>
+    <form>
+        <h4 class="mt-3" hx-post="{% url 'scores-refresh-in-list' %}" hx-target="#scoresld" hx-trigger="every 3s">Scores (best 50).</h4>
+        <input type="hidden" name="pk" value="{{ object.pk }}">
+    </form>
 
     <table class="table">
         <thead>
