--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,8 +19,10 @@
                                 <a class="nav-link" aria-current="page" href="{% url 'leaderboard-list' %}"><h3>Your
                                     leaderboards</h3></a>
                             {% else %}
-                                <a class="nav-link" aria-current="page" href="{% url 'temp-user-create' %}"><h3>Try
-                                    it</h3></a>
+                                <h3><button class="btn nav-link py-1" style="border: none" aria-current="page"
+                                            hx-post="{% url 'temp-user-create' %}"
+                                            hx-target="body" onclick="this.disabled=true;">
+                                    Try it</button></h3>
                             {% endif %}
                         </li>
                         {% if request.user.is_authenticated %}
